# text_editor

./: .gitignore  README.md
check_if_palindrome/: CMakeLists.txt  README.md
config/: text_editor.rc
count_vowels/: CMakeLists.txt
count_words_in_a_string/: CMakeLists.txt  README.md
headers/: status_bar.h
pig_latin/: CMakeLists.txt  README.md
reverse_a_string/: CMakeLists.txt  main.cpp
rss_feed_reader/: CMakeLists.txt
rss_feed_reader/generated_files/: ui_main_window.h
rss_feed_reader/headers/: main_window.h
rss_feed_reader/sources/: main.cpp  main_window.cpp
sources/: main_window.cpp  status_bar.cpp
text_editor/: README.md  resource.qrc  study.pro  text_editor.pro
text_editor/config/: text_editor.rc
text_editor/forms/: main_window.ui  mainwindow.ui
text_editor/generated_files/: ui_main_window.h  ui_mainwindow.h
text_editor/headers/: main_window.h  mainwindow.h  status_bar.h
text_editor/sources/: main.cpp  main_window.cpp  mainwindow.cpp  status_bar.cpp
